feat(DELETE): add all verification for delete method
