# public/swagger.json
@@ -7,6 +7,31 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"BookCollectionDTO": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"book_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"available": {
+						"type": "boolean"
+					},
+					"state": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"book_id",
+					"available",
+					"state"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"AuthorDTO": {
 				"properties": {
 					"id": {
@@ -67,6 +92,98 @@
 		"contact": {}
 	},
 	"paths": {
+		"/bookCollections": {
+			"get": {
+				"operationId": "GetAllBookCollections",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/BookCollectionDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"BookCollections"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateBookCollection",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BookCollectionDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"BookCollections"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/BookCollectionDTO"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/bookCollections/{id}": {
+			"get": {
+				"operationId": "GetBookCollectionById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/BookCollectionDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"BookCollections"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/books": {
 			"get": {
 				"operationId": "GetAllBooks",
