# src/models/bookCollection.model.ts
@@ -1,19 +1,48 @@
-import { Model } from "sequelize";
+import { Model, DataTypes } from "sequelize";
 import sequelize from "../config/database"; // Connexion à la base de données
+import { Book } from "./book.model";
 
 export interface BookCollectionAttributes {
+    id?: number;
+    book_id: number;
+    available: boolean;
+    state: string;
 }
 
 export class BookCollection
-  extends Model<BookCollectionAttributes>
-  implements BookCollectionAttributes
+    extends Model<BookCollectionAttributes>
+    implements BookCollectionAttributes
 {
+    public id?: number;
+    public book_id!: number;
+    public available!: boolean;
+    public state!: string;
 }
 
 BookCollection.init(
-  {},
-  {
-    sequelize,
-    tableName: "BookCollection",
-  }
+    {
+        id: {
+            type: DataTypes.INTEGER,
+            autoIncrement: true,
+            primaryKey: true,
+        },
+        book_id: {
+            type: DataTypes.INTEGER,
+            allowNull: false,
+        },
+        available: {
+            type: DataTypes.BOOLEAN,
+            allowNull: false,
+        },
+        state: {
+            type: DataTypes.STRING,
+            allowNull: false,
+        },
+    },
+    {
+        sequelize,
+        tableName: "BookCollection",
+    }
 );
+
+BookCollection.belongsTo(Book, { foreignKey: "book_id", as: "book" });
